--- a/pom.xml
+++ b/pom.xml
@@ -5,22 +5,22 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>home</groupId>
-    <artifactId>playing-with-utest</artifactId>
+    <artifactId>sttp</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <java.version>11</java.version>
-        <log4j.version>2.11.0</log4j.version>
-        <slf4j.version>1.8.0-beta2</slf4j.version>
         <scala.version.major>2.12</scala.version.major>
-        <scala.version.minor>7</scala.version.minor>
+        <scala.version.minor>8</scala.version.minor>
         <scala.version>${scala.version.major}.${scala.version.minor}</scala.version>
-        <akka.version>2.5.17</akka.version>
-        <akka.http.version>10.1.5</akka.http.version>
-        <jetty.version>9.4.12.v20180830</jetty.version>
-        <sttp.version>1.3.5</sttp.version>
+        <akka.version>2.5.20</akka.version>
+        <akka.http.version>10.1.7</akka.http.version>
+        <sttp.version>1.5.9</sttp.version>
+        <jetty.version>9.4.14.v20181114</jetty.version>
+        <junit.version>5.4.0</junit.version>
+        <junit.platform.launcher>1.3.2</junit.platform.launcher>
         <google.calendar.version>1.23.0</google.calendar.version>
     </properties>
 
@@ -87,6 +87,11 @@
             <artifactId>json4s_${scala.version.major}</artifactId>
             <version>${sttp.version}</version>
         </dependency>
+        <dependency> <!-- https://sttp.readthedocs.io/en/latest/examples.html -->
+            <groupId>org.json4s</groupId>
+            <artifactId>json4s-native_${scala.version.major}</artifactId>
+            <version>3.6.3</version>
+        </dependency>
         <dependency>
             <groupId>com.typesafe.akka</groupId>
             <artifactId>akka-http_${scala.version.major}</artifactId>
@@ -114,6 +119,17 @@
             </exclusions>
         </dependency>
         <dependency>
+            <groupId>com.typesafe.akka</groupId>
+            <artifactId>akka-slf4j_${scala.version.major}</artifactId>
+            <version>${akka.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+            <version>1.2.3</version>
+        </dependency>
+
+        <dependency>
             <groupId>org.scala-lang.modules</groupId>
             <artifactId>scala-java8-compat_${scala.version.major}</artifactId>
             <version>0.9.0</version>
@@ -129,60 +145,12 @@
             <artifactId>scala-library</artifactId>
             <version>${scala.version}</version>
         </dependency>
-<!--
-        <dependency>
-            <groupId>com.typesafe.akka</groupId>
-            <artifactId>akka-http-spray-json_${scala.version.major}</artifactId>
-            <version>${akka.http.version}</version>
-        </dependency>
--->
-        <dependency>
-            <groupId>org.apache.logging.log4j</groupId>
-            <artifactId>log4j-core</artifactId>
-            <version>${log4j.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.logging.log4j</groupId>
-            <artifactId>log4j-slf4j-impl</artifactId>
-            <version>${log4j.version}</version>
-            <exclusions>
-                <exclusion>
-                    <groupId>org.slf4j</groupId>
-                    <artifactId>slf4j-api</artifactId>
-                </exclusion>
-            </exclusions>
-        </dependency>
-        <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-api</artifactId>
-            <version>${slf4j.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.logging.log4j</groupId>
-            <artifactId>log4j-api-scala_${scala.version.major}</artifactId>
-            <version>11.0</version>
-        </dependency>
         <dependency>
             <groupId>org.scala-lang</groupId>
             <artifactId>scala-reflect</artifactId>
             <version>${scala.version}</version>
         </dependency>
-        <dependency>
-            <groupId>com.lihaoyi</groupId>
-            <artifactId>utest_2.12</artifactId>
-            <version>0.6.4</version>
-            <scope>test</scope>
-            <exclusions>
-                <exclusion>
-                    <groupId>org.scala-lang</groupId>
-                    <artifactId>scala-library</artifactId>
-                </exclusion>
-                <exclusion>
-                    <groupId>org.scala-lang</groupId>
-                    <artifactId>scala-reflect</artifactId>
-                </exclusion>
-            </exclusions>
-        </dependency>
+
         <dependency>
             <groupId>com.h2database</groupId>
             <artifactId>h2</artifactId>
@@ -193,6 +161,18 @@
             <groupId>org.jsoup</groupId>
             <artifactId>jsoup</artifactId>
             <version>1.11.3</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-engine</artifactId>
+            <version>${junit.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.junit.platform</groupId>
+            <artifactId>junit-platform-launcher</artifactId>
+            <version>${junit.platform.launcher}</version>
             <scope>test</scope>
         </dependency>
 
@@ -230,14 +210,14 @@
                     <dependency>
                         <groupId>org.ow2.asm</groupId>
                         <artifactId>asm</artifactId>
-                        <version>6.2.1</version>
+                        <version>7.0</version>
                     </dependency>
                 </dependencies>
             </plugin>
             <plugin>
                 <groupId>net.alchim31.maven</groupId>
                 <artifactId>scala-maven-plugin</artifactId>
-                <version>3.4.2</version>
+                <version>3.4.6</version>
                 <executions>
                     <execution>
                         <goals>
@@ -247,9 +227,10 @@
                     </execution>
                 </executions>
                 <configuration>
-                    <scalaVersion>${scala.version}</scalaVersion>
                     <args>
                         <arg>-unchecked</arg>
+                        <arg>-Ypartial-unification</arg>
+                        <arg>-Ywarn-dead-code</arg>
                     </args>
                 </configuration>
             </plugin>
